--- a/src/app/components/Admin-Components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/components/Admin-Components/admin-dashboard/admin-dashboard.component.html
@@ -11,8 +11,8 @@
 <body align="center">
     <div class="container">
         <span class="nav">
-            <a href="">HOME</a>
-            <a href="doctorDashboard">DASHBOARD</a>
+            <a href="adminDashboard">HOME</a>
+            <a href="adminDashboard">DASHBOARD</a>
             <a href="contactUsPage">CONTACT US</a>
             <a href="aboutUsPage">ABOUT US</a>
         </span>
@@ -39,9 +39,6 @@
                     Click this link below to view all the patients
                     <br>
                     <br>
-                    <br>
-                    <br>
-                    <br>
                     <a class="buttons" href="AdminPatientListPage">CLICK HERE</a>
                     <br>
                     <br>
@@ -52,14 +49,43 @@
                     Click the button below to see your details
                     <br>
                     <br>
-                    <br>
-                    <br>
-                    <br>
                     <a class="buttons" href="appointmentListPage">CLICK HERE</a>
                     <br>
                     <br>
             </div>
-            
+            <br>
+            <br>
+            <br>
+            <div class="col-sm-4"style="background-color:whitesmoke;">
+                <h5 class="skyblue">ADD DOCTOR</h5>
+                <br>
+                Click the button below to see your details
+                <br>
+                <br>
+                <a class="buttons" href="registerDoctor">CLICK HERE</a>
+                <br>
+                <br>
+        </div>
+        <div class="col-sm-4"style="background-color:whitesmoke;">
+            <h5 class="skyblue">ADD MEDICINE</h5>
+            <br>
+            Click the button below to see your details
+            <br>
+            <br>
+            <a class="buttons" href="">CLICK HERE</a>
+            <br>
+            <br>
+    </div>
+    <div class="col-sm-4"style="background-color:whitesmoke;">
+        <h5 class="skyblue">VIEW MEDICINE</h5>
+        <br>
+        Click the button below to see your details
+        <br>
+        <br>
+        <a class="buttons" href="">CLICK HERE</a>
+        <br>
+        <br>
+</div>
         </div>
        </div>
        
