--- a/src/app/components/Admin-Components/doctor-list/doctor-list.component.html
+++ b/src/app/components/Admin-Components/doctor-list/doctor-list.component.html
@@ -18,11 +18,14 @@
         </span>
         <br>
         <br>
-        <input type = "email" placeholder="Enter email Id"><button class = "searchButtons" > SEARCH <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-          </svg></button>
+        <form novalidate [formGroup]="searchForm">
+            <input type = "number" placeholder="Enter Doctor Id" formControlName="idForSearch" ><button class = "searchButtons" (click)= "getDoctorById()" > SEARCH <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+              </svg></button>
+         </form>
           <br>
           <br>
+          <p style = "color:red">{{errorMessage}}</p>
           <!-- <p style = "color:red">{{deleteMessage}}</p>
           <p style = "color:red">{{errorMessage}}</p> -->
         <h4>DOCTOR LIST</h4>
@@ -39,6 +42,9 @@
                     </th>
                     <th>
                         SPECIALIZATION
+                    </th>
+                    <th>
+                        SPECIALIZATION ID
                     </th>
                     <th>
                         QUALIFICATION
@@ -62,6 +68,8 @@
                     <td>{{doctor.doctorId}}</td>
                 
                     <td>{{doctor.doctorName}}</td>
+
+                    <td>{{doctor.specialization}}</td>
                 
                     <td>{{doctor.specializationId}}</td>
                 
