--- a/src/app/components/Doctor-Components/doctor-dash-board/doctor-dash-board.component.html
+++ b/src/app/components/Doctor-Components/doctor-dash-board/doctor-dash-board.component.html
@@ -41,7 +41,7 @@
                     consultancy
                     <br>
                     <br>
-                    <a class="buttons" href="getAppointments">CLICK HERE</a>
+                    <a class="buttons" href="appointmentListPage">CLICK HERE</a>
                     <br>
                     <br>
                 </div>
