--- a/src/app/components/Admin-Components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/components/Admin-Components/admin-dashboard/admin-dashboard.component.html
@@ -69,20 +69,20 @@
         <div class="col-sm-4"style="background-color:whitesmoke;">
             <h5 class="skyblue">ADD MEDICINE</h5>
             <br>
-            Click the button below to see your details
+            Click the button below to add medicines for patients
             <br>
             <br>
-            <a class="buttons" href="">CLICK HERE</a>
+            <a class="buttons" href="doctorAddMedicine">CLICK HERE</a>
             <br>
             <br>
     </div>
     <div class="col-sm-4"style="background-color:whitesmoke;">
-        <h5 class="skyblue">VIEW MEDICINE</h5>
+        <h5 class="skyblue">VIEW MEDICINES</h5>
         <br>
         Click the button below to see your details
         <br>
         <br>
-        <a class="buttons" href="">CLICK HERE</a>
+        <a class="buttons" href="adminMedicineList">CLICK HERE</a>
         <br>
         <br>
 </div>
