--- a/src/app/components/Admin-Components/admin-patient-list/admin-patient-list.component.html
+++ b/src/app/components/Admin-Components/admin-patient-list/admin-patient-list.component.html
@@ -48,7 +48,7 @@
                     <th>
                         BLOOD GROUP
                     </th>
-                    <!-- <th>
+                    <th>
                         DATE OF BIRTH
                     </th>
                     <th>
@@ -57,12 +57,6 @@
                     <th>
                         ALTERNATE EMAIL 
                     </th>
-                    <th>
-                        WEIGHT
-                    </th>
-                    <th>
-                        HEIGHT
-                    </th> -->
                     <th>
                         ACTIONS
                     </th>
@@ -80,15 +74,11 @@
                 
                     <td>{{patient.bloodGroup}}</td>
 
-                    <!-- <td>{{patient.dateOfBirth}}</td>
+                    <td>{{patient.dateOfBirth}}</td>
 
                     <td>{{patient.alternatePhoneNumber}}</td>
 
                     <td>{{patient.alternateEmail}}</td>
-
-                    <td>{{patient.patientWeight}}</td>
-
-                    <td>{{patient.patientHeight}}</td> -->
                
                     <td><button class = "deleteButtons" (click) = "deletePatient(patient.patientEmail)" >DELETE</button>
                     </td>
