--- a/src/app/components/Doctor-Components/doctor-dash-board/doctor-dash-board.component.html
+++ b/src/app/components/Doctor-Components/doctor-dash-board/doctor-dash-board.component.html
@@ -28,8 +28,8 @@
                     <br>
                     Click the below button to allocate medicines for patient as per their email Id
                     <br>
-                    <br>
-                    <a class="buttons" href="addMedicines">CLICK HERE</a>
+                    <br> 
+                    <a class="buttons" href="doctorAddMedicine">CLICK HERE</a>
                     <br>
                     <br>
                 </div>
