--- a/src/app/components/Doctor-Components/register-doctor/register-doctor.component.html
+++ b/src/app/components/Doctor-Components/register-doctor/register-doctor.component.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="nav">
             <a routerLink="">HOME</a>
-            <a routerLink="patientDashboard">DASHBOARD</a>
+            <a routerLink="adminDashBoard">DASHBOARD</a>
             <a routerLink="aboutUsPage">ABOUT US</a>
             <a routerLink="contactUsPage">CONTACT US</a>
         </div>
