--- a/src/app/components/Patient-Components/patient-dashboard/patient-dashboard.component.html
+++ b/src/app/components/Patient-Components/patient-dashboard/patient-dashboard.component.html
@@ -31,7 +31,7 @@
                     with one of our doctors.
                     <br>
                     <br>
-                    <a class="buttons" href="medicinePage">BUY MEDICINES</a>
+                    <a class="buttons" href="patientmedicinePage">BUY MEDICINES</a>
                     <br>
                     <br>
                 </div>
