--- a/src/app/components/Doctor-Components/add-medicine/add-medicine.component.css
+++ b/src/app/components/Doctor-Components/add-medicine/add-medicine.component.css
@@ -29,7 +29,7 @@ h4{
 }
 
 table{
-    margin-left: 30%;
+    margin-left: 37%;
 }
 
 .table2{
@@ -94,6 +94,10 @@ input[type = "email"]{
 
 input[type = "date"]{
     width: 200px;
+}
+
+input[type = "number"]{
+    width:200px;
 }
 
 .findUs{
