appoinntments doctor and admin final

--- a/src/app/components/Admin-Components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/components/Admin-Components/admin-dashboard/admin-dashboard.component.html
@@ -49,7 +49,7 @@
                     Click the button below to see your details
                     <br>
                     <br>
-                    <a class="buttons" href="appointmentListPage">CLICK HERE</a>
+                    <button class="buttons" (click)="appointmentListPage()">CLICK HERE</button>
                     <br>
                     <br>
             </div>
