--- a/src/app/components/Admin-Components/appointment-list/appointment-list.component.html
+++ b/src/app/components/Admin-Components/appointment-list/appointment-list.component.html
@@ -18,11 +18,30 @@
         </span>
         <br>
         <br>
-        <!-- <form novalidate [formGroup]="searchFormSpecialization">
-        <input type = "number" placeholder="Enter Doctor Id" formControlName="idForSearch" (click)= "getDoctorById()" [disabled]="searchForm.invalid"><button class = "searchButtons" > SEARCH <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+        <div *ngIf="diff=='allAppointments'">
+        <form novalidate [formGroup]="searchFormSpecializationId">
+        <input type = "number" placeholder="Enter Specialization Id" formControlName="specializationidForSearch" ><button class = "searchButtons" (click)= "getAppointmentBySpecializationId()" [disabled]="this.searchFormSpecializationId.invalid"> SEARCH <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
             <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
           </svg></button>
-          </form> -->
+          </form>
+          </div>
+          <form novalidate [formGroup]="searchFormConsultationType">
+            <input type = "text" placeholder="Enter Consultation Type" formControlName="consultationTypeForSearch" ><button class = "searchButtons" (click)= "getAppointmentByConsultationType()" [disabled]="this.searchFormConsultationType.invalid"> SEARCH <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+              </svg></button>
+              </form>
+              <div *ngIf="diff=='allAppointments'">
+              <form novalidate [formGroup]="searchFormDoctorId">
+                <input type = "text" placeholder="Enter Doctor Id" formControlName="doctorIdForSearch" ><button class = "searchButtons" (click)= "getAppointmentByDoctorId()" [disabled]="this.searchFormDoctorId.invalid"> SEARCH <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                    <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                  </svg></button>
+                  </form>
+                  </div>
+                  <form novalidate [formGroup]="searchFormStatus">
+                    <input type = "text" placeholder="Enter Status" formControlName="statusForSearch" ><button class = "searchButtons" (click)= "getAppointmentByStatus()" [disabled]="this.searchFormStatus.invalid"> SEARCH <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                      </svg></button>
+                      </form>
           <br>
           <br>
           <p style = "color:red">{{errorMessage}}</p>
