--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -77,18 +77,30 @@
                 <p>Our hospital equipped with international standared equipments</p>
                 <p>Hospital campus is being sanitized for once per hour</p>
                 <p>3rd Largest hospital in India</p>    
+                <br>
+                    <button class="buttons" routerLink="facilities">CLICK HERE</button>
+                    <br>
+                    <br>
             </div>
             <div class="col-sm-4" style="background-color:whitesmoke;">
                 <h5 class = "skyblue">DOCTORS</h5>
                 <p>We have the best in industry and experienced doctors</p>
                 <p>The Doctors are specialized in each specialiteis</p>
                 <p></p>
+                <br>
+                    <button class="buttons" routerLink="facilities">CLICK HERE</button>
+                    <br>
+                    <br>
             </div>
             <div class="col-sm-4" style="background-color:whitesmoke;">
                 <h5 class = "skyblue">FACILITIES</h5>
                 <p>Each specialities is available in different blocks</p>
                 <p>Booking appointments Facilities</p>
                 <p>Well strucured Blocks for each specilaities</p>    
+                <br>
+                    <button class="buttons" routerLink="facilities">CLICK HERE</button>
+                    <br>
+                    <br>
             </div>
         </div>
         <br>
@@ -98,6 +110,10 @@
                 <p>You can book an appointment for online consulting and also for an offline consulting</p>
                 <p>And you can book an</p>
                 <p>Consult doctors online</p>   
+                <br>
+                    <button class="buttons" routerLink="facilities">CLICK HERE</button>
+                    <br>
+                    <br>
                
                 
             </div>
@@ -106,6 +122,10 @@
                 <p>Our hospital equipped with international standared equipments</p>
                 <p>Hospital campus is being sanitized for once per hour</p>
                 <p>3rd Largest hospital in India</p>
+                <br>
+                    <button class="buttons" routerLink="facilities">CLICK HERE</button>
+                    <br>
+                    <br>
             </div>
         </div>
         </div>
