--- a/src/app/components/Admin-Components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/components/Admin-Components/admin-dashboard/admin-dashboard.component.html
@@ -18,7 +18,7 @@
         </span>
         <br>
         <br>
-        <h5>Welcome,</h5>
+        <h5>WELCOME TO ADMIN DASHBOARD</h5>
         <br>
         <br>
         <div style="background-color: whitesmoke;">
@@ -88,7 +88,8 @@
 </div>
         </div>
        </div>
-       
+       <br>
+       <a class = "buttons" href = "logoutPage">LOGOUT</a>
         <br>
         <br>
         <br>
