--- a/src/app/components/Doctor-Components/doctor-dash-board/doctor-dash-board.component.html
+++ b/src/app/components/Doctor-Components/doctor-dash-board/doctor-dash-board.component.html
@@ -18,12 +18,12 @@
         </span>
         <br>
         <br>
-        <h5>Welcome,</h5>
+        <h5 style = "background-color:skyblue">WELCOME TO DOCTOR DASHBOARD</h5>
         <br>
         <br>
         <div style="background-color: whitesmoke;">
             <div class="row">
-                <div class="col-sm-4" style="background-color:whitesmoke;">
+                <div class="col-sm-6" style="background-color:whitesmoke;">
                     <h5 class="skyblue">ALLOCATE MEDICINES</h5>
                     <br>
                     Click the below button to allocate medicines for patient as per their email Id
@@ -33,7 +33,7 @@
                     <br>
                     <br>
                 </div>
-                <div class="col-sm-4" style="background-color:whitesmoke;">
+                <div class="col-sm-6" style="background-color:whitesmoke;">
                     <h5 class="skyblue">ALL APPOINTMENTs</h5>
                     <br>
                     Book an appointment for consulting with one of our specialists
@@ -45,36 +45,36 @@
                     <br>
                     <br>
                 </div>
-                <div class="col-sm-4" style="background-color:whitesmoke;">
+                <div class="col-sm-6" style="background-color:whitesmoke;">
                     <h5 class="skyblue">VIEW MY DETAILS</h5>
                     <br>
                     Click the button below to see your details
                     <br>
                     <br>
                     <br>
-                    <br>
-                    <br>
-                    <a class="buttons" href="doctorDetails">VIEW DETAILS</a>
+                    <a class="buttons" href="doctorDetails">CLICK HERE</a>
                     <br>
                     <br>
                 </div>
-                <div class="col-sm-4" style="background-color:whitesmoke;">
+                <div class="col-sm-6" style="background-color:whitesmoke;">
                     <h5 class="skyblue">VIEW ALL PATIENTS</h5>
                     <br>
                     Click the button below to see your details
+                
                     <br>
                     <br>
                     <br>
-                    <br>
-                    <br>
-                    <a class="buttons" (click)="getAllPatients()">VIEW DETAILS</a>
+                    <a class="buttons" (click)="getAllPatients()">CLICK HERE</a>
                     <br>
                     <br>
             </div>
-            
+           
         </div>
+        <br>
        </div>
-       
+       <br>
+       <a class = "buttons" href = "logoutPage">LOGOUT</a>
+
         <br>
         <br>
         <br>
